WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143068
[Cocoa] RemoteInspectorXPCConnection::deserializeMessage() leaks a NSDictionary under Objective-C GC
https://bugs.webkit.org/show_bug.cgi?id=143068
Summary
[Cocoa] RemoteInspectorXPCConnection::deserializeMessage() leaks a NSDictiona...
Andy Estes
Reported
2015-03-25 18:58:37 PDT
[Cocoa] RemoteInspectorXPCConnection::deserializeMessage() leaks a NSDictionary under Objective-C GC
Attachments
Patch
(1.73 KB, patch)
2015-03-25 19:00 PDT
,
Andy Estes
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2015-03-25 19:00:55 PDT
Created
attachment 249462
[details]
Patch
mitz
Comment 2
2015-03-25 19:34:21 PDT
Comment on
attachment 249462
[details]
Patch Could you have fixed this by adopting the result of _CFXPCCreate… into a RetainPtr and not having to think about GC here?
Andy Estes
Comment 3
2015-03-25 19:52:05 PDT
(In reply to
comment #2
)
> Comment on
attachment 249462
[details]
> Patch > > Could you have fixed this by adopting the result of _CFXPCCreate… into a > RetainPtr and not having to think about GC here?
Oh, yes! I guess I didn't know / forgot that RetainPtr had an autorelease(). I'll assume that your r+ is still good for doing that instead :) Thanks!
Andy Estes
Comment 4
2015-03-25 20:11:46 PDT
Committed
r181992
: <
http://trac.webkit.org/changeset/181992
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug