[Cocoa] RemoteInspectorXPCConnection::deserializeMessage() leaks a NSDictionary under Objective-C GC https://bugs.webkit.org/show_bug.cgi?id=143068

Reviewed by Dan Bernstein.

* inspector/remote/RemoteInspectorXPCConnection.mm:
(Inspector::RemoteInspectorXPCConnection::deserializeMessage): Used RetainPtr::autorelease(), which does the right thing under GC.

Canonical link: https://commits.webkit.org/161101@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181992 268f45cc-cd09-0410-ab3c-d52691b4dbfc